<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#afeeee"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/register_speciality_edit"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_corners"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/speciality"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/email_editText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/email_editText"
        app:layout_constraintTop_toBottomOf="@+id/register_checkBox" />

    <EditText
        android:id="@+id/register_firstName"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="132dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rounded_corners"
        android:ems="10"
        android:gravity="center"
        android:hint="First name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/register_lastName"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/rounded_corners"
        android:ems="10"
        android:gravity="center"
        android:hint="Last name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_firstName"
        app:layout_constraintVertical_bias="0.036" />

    <EditText
        android:id="@+id/email_editText"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/rounded_corners"
        android:ems="10"
        android:hint="@string/email"
        android:gravity="center"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/register_lastName"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="@+id/register_lastName"
        app:layout_constraintTop_toBottomOf="@+id/register_lastName" />

    <EditText
        android:id="@+id/pass_editText"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/rounded_corners"
        android:ems="10"
        android:hint="@string/password"
        android:gravity="center"
        android:importantForAutofill="no"
        android:inputType="numberPassword"
        app:layout_constraintEnd_toEndOf="@+id/email_editText"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="@+id/email_editText"
        app:layout_constraintTop_toBottomOf="@+id/email_editText" />

<!--    <Button-->
<!--        android:id="@+id/register_button"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="128dp"-->
<!--        android:background="@drawable/button_corners"-->
<!--        android:text="@string/register"-->
<!--        app:layout_constraintEnd_toEndOf="@+id/pass_editText"-->
<!--        app:layout_constraintHorizontal_bias="0.0"-->
<!--        app:layout_constraintStart_toStartOf="@+id/pass_editText"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/pass_editText" />-->

    <com.google.android.material.button.MaterialButton
        android:id="@+id/register_button"
        android:layout_width="346dp"
        android:layout_height="49dp"
        android:layout_marginTop="136dp"
        android:text="@string/register"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        app:layout_constraintEnd_toEndOf="@+id/pass_editText"
        app:layout_constraintStart_toStartOf="@+id/pass_editText"
        app:layout_constraintTop_toBottomOf="@+id/pass_editText" />

    <TextView
        android:id="@+id/logIn_textView"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/log_in"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        app:autoSizeTextType="none"
        app:layout_constraintEnd_toEndOf="@+id/register_button"
        app:layout_constraintStart_toStartOf="@+id/register_button"
        app:layout_constraintTop_toBottomOf="@+id/register_button" />

    <CheckBox
        android:id="@+id/register_checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/i_am_a_doctor"
        app:layout_constraintBottom_toTopOf="@+id/register_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass_editText"
        app:layout_constraintVertical_bias="0.025" />

    <com.sofakingforever.stars.AnimatedStarsView
        android:id="@+id/stars"
        android:layout_width="413dp"
        android:layout_height="718dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:starsView_bigStarThreshold="10dp"
        app:starsView_maxStarSize="16dp"
        app:starsView_meteoritesColors="@array/meteorites_colors"
        app:starsView_meteoritesEnabled="true"
        app:starsView_meteoritesInterval="2000"
        app:starsView_minStarSize="1dp"
        app:starsView_starColors="@array/star_colors"
        app:starsView_starCount="50" />
</androidx.constraintlayout.widget.ConstraintLayout>